--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,19 +10,21 @@
   ],
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.collab-proxy": "1.7.1",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.14",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.inputsystem": "1.0.2",
+    "com.unity.collab-proxy": "2.0.4",
+    "com.unity.ide.rider": "3.0.21",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.probuilder": "4.5.2",
     "com.unity.recorder": "2.5.7",
-    "com.unity.render-pipelines.universal": "10.5.1",
-    "com.unity.shadergraph": "10.6.0",
-    "com.unity.test-framework": "1.1.27",
+    "com.unity.render-pipelines.universal": "10.10.1",
+    "com.unity.shadergraph": "10.10.1",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
+    "com.unityfx.outline": "0.8.5",
+    "com.unityfx.outline.urp": "0.5.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -53,8 +55,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unityfx.outline": "0.8.5",
-    "com.unityfx.outline.urp": "0.5.0"
+    "com.unity.modules.xr": "1.0.0"
   }
-  }
+}
